@@ -1,0 +1,146 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+
+<html>
+  <head>
+    <title></title>
+    <link rel="stylesheet" title="normal" type="text/css" href= 
+    "gnucash.css">
+
+    <title>GnuCash and the EURO</title>
+  </head>
+
+  <body>
+    <h1> GnuCash and the EURO</h1>
+
+    <h2> Introduction</h2>
+
+    <p>On January 1, 1999, eleven European Union countries formed
+    an economic and monetary union (EMU) and started using a single
+    currency - the euro. These countries locked the exchange rates
+    of their national currencies to the euro and are sharing the
+    new currency.</p>
+    <p>However, euro notes and coins will not be available until 
+    January 1, 2001. Until then, the old national currency notes
+    and coins (French francs, Deutschmarks etc) will continue to
+    circulate. But in law they are part of the euro. Their value
+    in euro is completely fixed. All kinds of cashless monetary
+    transactions like cheques or wire transfers are possible in
+    euro</p>
+
+    <p>You can find more information about the euro at:
+    <a href="http://europa.eu.int/euro"> http://europa.eu.int/euro
+    </a>.</p>
+
+    <h2> EMU Member Countries and Exchange Rates</h2>
+
+    <a name="euro_iso_curr"></a>
+
+    <p>The following table shows the EMU member countries and
+    the respective exchange rates of the euro to the old national
+    currencies. More countries are expected to join the EMU later.</p>
+
+    <table border="1">
+      <tr>
+        <th>Country</th>
+        <th>ISO Code</th>
+	<th>Full Description</th>
+	<th>Exchange Rate</th>
+      </tr>
+
+      <tr>
+        <td>
+        </td>
+      </tr>
+
+      <tr>
+	<td>Austria</td>
+        <td>ATS</th>
+	<td>Austrian Schilling</td>
+	<td>1 euro = 13.7603 S</td>
+      </tr>
+
+      <tr>
+	<td>Belgium</td>
+        <td>BEF</th>
+	<td>Belgian Franc</td>
+	<td>1 euro = 40.3399 bfrs</td>
+      </tr>
+
+      <tr>
+	<td>Finland</td>
+        <td>FIM</th>
+	<td>Finnish Mark</td>
+	<td>1 euro = 5.94573 Fmk</td>
+      </tr>
+
+      <tr>
+	<td>France</td>
+        <td>FRF</th>
+	<td>French Franc</td>
+	<td>1 euro = 6.55957 FF</td>
+      </tr>
+
+      <tr>
+	<td>Germany</td>
+        <td>DEM</th>
+	<td>German Mark</td>
+	<td>1 euro = 1.95538 DM</td>
+      </tr>
+
+      <tr>
+	<td>Ireland</td>
+        <td>IEP</th>
+	<td>Irish Pound</td>
+	<td>1 euro = 0.787564 Ir. &pound;</td>
+      </tr>
+
+      <tr>
+	<td>Italy</td>
+        <td>ITL</th>
+	<td>Italian Lira</td>
+	<td>1 euro = 1936.27 Lit</td>
+      </tr>
+
+      <tr>
+	<td>Luxembourg</td>
+        <td>LUF</th>
+	<td>Luxembourgian Franc</td>
+	<td>1 euro = 40.3399 lfrs</td>
+      </tr>
+
+      <tr>
+	<td>Netherlands</td>
+        <td>NLG</th>
+	<td>Dutch Guilder</td>
+	<td>1 euro = 2.20371 hfl</td>
+      </tr>
+
+      <tr>
+	<td>Portugal</td>
+        <td>PTE</th>
+	<td>Portuguese Escudo</td>
+	<td>1 euro = 200.482 Esc</td>
+      </tr>
+
+      <tr>
+	<td>Spain</td>
+        <td>ESP</th>
+	<td>Spanish Peseta</td>
+	<td>1 euro = 166.386 Ptas</td>
+      </tr>
+    </table>
+
+    <h2> EURO support in GnuCash</h2>
+
+    <p>You can enable euro support in GnuCash in the international
+    category of the <a href="xacc-globalprefs.html">preferences</a>
+    dialog box. If your system locale specifies one of the 
+    <a href="#euro_iso_curr">EMU member currencies</a>, euro support
+    is enabled by default.</p>
+
+    <p>FIXME: Actual documentation with screenshots and so on</p>
+
+    <p> Return to <a href="xacc-main.html"> Main Documentation
+    Page.</a></p>
+  </body>
+</html>
